Fix visual bug with overflow of about text.
* Also improved code for chevron so that it stays at % of vh
* Removed footer from about section
* Replaced margin-top with padding-top for hero container to keep chevron visible at all times

--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -1,6 +1,7 @@
 
 .c-hero {
   height: 100vh;
+  max-height: 100vh;
   padding-left: 20px;
 
   &__header {
@@ -20,14 +21,14 @@
       font-size: 1.5em;
     }
 
-    @include media(desktop) {
-      font-size: 2.5em;
-    }
+    // @include media(desktop) {
+    //   font-size: 2.0em;
+    // }
   }
 
-  @media only screen and (min-width: 568px)
-                     and (max-width: 700px)
-                     and (orientation: landscape) {
-    height: auto;
-  }
+  // @media only screen and (min-width: 568px)
+  //                    and (max-width: 700px)
+  //                    and (orientation: landscape) {
+  //   height: auto;
+  // }
 }
