--- a/src/stylesheets/components/scroll-indicator.scss
+++ b/src/stylesheets/components/scroll-indicator.scss
@@ -1,27 +1,21 @@
 .c-scroll-indicator {
 	position: absolute;
 	left: 50%;
-	font-size: 50px;
+	bottom: 5%;
 	-webkit-animation: bounce 1s infinite;
 	        animation: bounce 1s infinite;
 
-	&__container {
-		position: relative;
-		-webkit-box-flex: 1;
-		    -ms-flex-positive: 1;
-		        flex-grow: 1;
-	}
 
-	@at-root {
-		@-webkit-keyframes bounce {
-			 0% { bottom: 35%; }
-			 50%   { bottom: 40%; }
-			 100% { bottom: 35%; }
-		}
-		@keyframes bounce {
-			 0% { bottom: 35%; }
-			 50%   { bottom: 40%; }
-			 100% { bottom: 35%; }
-		}
-	}
+	// @at-root {
+	// 	@-webkit-keyframes bounce {
+	// 		 0% { bottom: 35%; }
+	// 		 50%   { bottom: 40%; }
+	// 		 100% { bottom: 35%; }
+	// 	}
+	// 	@keyframes bounce {
+	// 		 0% { bottom: 35%; }
+	// 		 50%   { bottom: 40%; }
+	// 		 100% { bottom: 35%; }
+	// 	}
+	// }
 }
