--- a/src/stylesheets/layout/_main.scss
+++ b/src/stylesheets/layout/_main.scss
@@ -9,6 +9,8 @@
       margin-top: 75px;
     }
 
+    overflow: hidden;
+    position: relative;
   }
 
   &--highlight {
